Cleanup and refactoring of lots of stuff. Added GameLoader unit test